--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="E:/myportfolio/Style.css">
+    <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -31,7 +31,7 @@
             <a href="resume_kavya15.pdf" class="cv" target="_blank" download><i class="material-icons">attachment</i>DOWNLOAD CV</a>
         </div>
         <div class="image-container">
-            <a target="_blank" href="E:\myportfolio\image.jpeg">
+            <a target="_blank" href="image.jpeg">
                 <img src="E:\myportfolio\image.jpeg" alt="image" class="image"/>
             </a>
         </div>
