--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="resume_kavya15.pdf" class="cv" target="_blank" download><i class="material-icons">attachment</i>DOWNLOAD CV</a>
         </div>
         <div class="image-container">
-            <a target="_blank" href="image.jpeg">
+            <a target="_blank" href="/image.jpeg">
                 <img src="image.jpeg" alt="image" class="image"/>
             </a>
         </div>
@@ -71,33 +71,33 @@
     <section id="skills">
         <h2> Skills </h2>
         <ul>
-            <li><img src="icons\python-icon-gl.png"class="icons"/> Python</li>
-            <li><img src="icons\java-icon.png"class="icons"/> Java</li>
-            <li><img src="icons\html-icon.png"class="icons"/> HTML</li>
-            <li><img src="icons\css-icon.png"class="icons"/> CSS</li>
-            <li> <img src="icons\javascript-icon.png"class="icons"/> JavaScript </li>
-            <li><img src="icons\mysql-icon.png"class="icons"/> MySQL</li>
-            <li><img src="icons\mongodb-icon.png"class="icons"/> MongoDB</li>
-            <li><img src="icons\machinelearning-icon.jpg"class="icons"/> Machine Learning</li>
+            <li><img src="icons/python-icon-gl.png"class="icons"/> Python</li>
+            <li><img src="icons/java-icon.png"class="icons"/> Java</li>
+            <li><img src="icons/html-icon.png"class="icons"/> HTML</li>
+            <li><img src="icons/css-icon.png"class="icons"/> CSS</li>
+            <li> <img src="icons/javascript-icon.png"class="icons"/> JavaScript </li>
+            <li><img src="icons/mysql-icon.png"class="icons"/> MySQL</li>
+            <li><img src="icons/mongodb-icon.png"class="icons"/> MongoDB</li>
+            <li><img src="icons/machinelearning-icon.jpg"class="icons"/> Machine Learning</li>
         </ul>
     </section>
     <section id="projects">
         <h2> Projects</h2>
       <div class="projects-list">
         <div class="project">
-            <img src="icons\fake-newsavif.avif" alt="project-img" class="project-img"/>
+            <img src="icons/fake-newsavif.avif" alt="project-img" class="project-img"/>
             <h3>Fake News Detection System (ML)</h3>
             <button type="button" class="btn btn-dark"> <a href="https://github.com/ykavya5/Fakenews-detectionsystem-using-ml" target="_blank"><strong>GitHub Link</strong></a></button>
 
        </div>
        <div class="project">
-        <img src="icons\loan-approval.jpg" alt="loan-approval-mg" class="project-img"/>
+        <img src="icons/loan-approval.jpg" alt="loan-approval-mg" class="project-img"/>
         <h3>Loan Approval Prediction (ML)</h3>
         <button type="button" class="btn btn-dark"> <a href="https://github.com/ykavya5/loanapproval-project-using-ml" target="_blank"><strong>GitHub Link</strong></a></button>
         
    </div>
    <div class ="project">
-    <img src="icons\ecommerce_img.jpg" alt="project_img" class="project-img"/>
+    <img src="icons/ecommerce_img.jpg" alt="project_img" class="project-img"/>
     <h3> E-commerce Web Application </h3>
    <button type="button" class="btn btn-dark"><a href="https://github.com/ykavya5/E-commerce-website-Django" target="_blank"><strong>GitHub Link</strong></a></button>
    </div>
