--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="image-container">
             <a target="_blank" href="/image.jpeg">
-                <img src="image.jpeg" alt="image" class="image"/>
+                <img src="/image.jpeg" alt="image" class="image"/>
             </a>
         </div>
     </div>
