updated index and image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="image-container">
             
-                <img src="image.jpeg" alt="image" class="image"/>
+                <img src="icons/image.jpeg" alt="image" class="image"/>
             
         </div>
     </div>
